--- a/src/main/resources/static/css/shopping.css
+++ b/src/main/resources/static/css/shopping.css
@@ -373,12 +373,12 @@ _filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled='true', sizi
 	color: #fff;
 }
 .jsNav a:hover {
-	background: url(../../templates/images/bg01.gif) no-repeat;
+	background: url(../images/bg01.gif) no-repeat;
 	color: #FF1555;
 	text-decoration: none;
 }
 .jsNav .imgSelected {
-	background: url(../../templates/images/bg01.gif) no-repeat;
+	background: url(../images/bg01.gif) no-repeat;
 	color: #FF1555;
 }
 .qq {
